--- a/animal_rescue_frontend/src/App.css
+++ b/animal_rescue_frontend/src/App.css
@@ -38,47 +38,49 @@
 }
 
 h1 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: rgb(76, 72, 72);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial;
+  color: rgb(233, 241, 241);
 }
 
 h3 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: rgb(22, 21, 21);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: rgb(213, 206, 206);
 }
 
 
 body{
-  background: rgb(23, 155, 181);
-  background: linear-gradient(90deg,rgb(89, 175, 221)0%,rgb(89, 175, 221) 43%);
+  background: linear-gradient(90deg,rgb(9, 69, 96)0%,rgba(32, 44, 96, 0.997) 43%);
 }
 
 #animal-content{
-  max-width: 700px;
+  max-width: 500px;
+  max-height: 700px;
   margin: auto;
   margin-top: 100px;
+  border-radius: 4px;
   margin-bottom: 100px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  background-color: #fff;
-  justify-content: space-around;
-  align-items: flex-start;
+  box-shadow: 0 14px 28px rgba(16, 15, 15, 0.25), 0 10px 10px rgba(0,0,0,0.22);
+  /* justify-content: space-around; */
+  /* align-items: flex-start; */
 }
 
 .profile_pic{
   margin: auto;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   border-radius: 4px;
-  max-width: 400px;
-  max-height: 400px;
-  margin-top: 10px;
+  width: 100%;
+  height: 100%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .banner {
-  padding: 5px;
-  text-align: center;
-  background: rgb(116, 156, 243);
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  color: white;
+  background: linear-gradient(90deg,rgb(1, 12, 40)0%,rgb(2, 21, 74) 43%);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0,0,0,0.22);
   font-size: 30px;
+  border-radius: 4px;
+}
+
+.bannerlogo{
+  display: inline-block;
+  max-width: 200px; 
 }
